[package]
name = "mw_unknown_merc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Remember to disable dynamic linking before building release version!
# bevy = "0.10.1"
bevy = { version = "0.10.1", features = ["dynamic_linking"] }

# Needed for one-time global static initialization
once_cell = "1.17.1"
# https://time-rs.github.io/book/
time = { version = "0.3.21", features = ["formatting", "macros"] }


#
# Optimizations taken from:
# https://bevyengine.org/learn/book/getting-started/setup/
#
# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
